fixed navbar toggle on smaller screen

--- a/style.css.scss
+++ b/style.css.scss
@@ -2,3 +2,7 @@ body {
   padding-top: 50px;
   padding-bottom: 20px;
 }
+
+footer {
+	padding-top: 50px;
+}
